<resources>
    <string name="app_name">Proiect Final</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="title_manage_trip">Manage Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="price_eur">Price(eur):</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="gallery_photo">Gallery photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="select">SELECT</string>
    <string name="failed_to_load_image">failed to load image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
