<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_rating_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/rating"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_startdate_readonly" />

            <EditText
                android:id="@+id/edittext_tripname_readonly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:drawablePadding="@dimen/five_dp"
                android:cursorVisible="false"
                android:drawableLeft="@drawable/ic_info"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_tripname_readonly" />

            <TextView
                android:id="@+id/textview_tripname_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/trip_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/textview_triptype_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/trip_type"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_destination_readonly" />

            <TextView
                android:id="@+id/textview_destination_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/destination"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_tripname_readonly" />

            <ImageView
                android:id="@+id/imageView_readonly"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_16"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_8"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_startdate_readonly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:text=""
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toStartOf="@+id/button_enddate_readonly"
                app:layout_constraintStart_toStartOf="@+id/textview_startdate_readonly"
                app:layout_constraintTop_toBottomOf="@+id/textview_startdate_readonly" />

            <SeekBar
                android:id="@+id/seekbar_readonly"
                style="@android:style/Widget.Material.Light.SeekBar"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_16"
                android:max="1000"
                android:progress="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_price_readonly" />

            <TextView
                android:id="@+id/textview_enddate_readonly"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/space_8"
                android:text="@string/end_date"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textview_startdate_readonly"
                app:layout_constraintTop_toBottomOf="@+id/seekbar_readonly" />

            <Button
                android:id="@+id/button_enddate_readonly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:text=""
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textview_enddate_readonly"
                app:layout_constraintTop_toBottomOf="@+id/textview_enddate_readonly" />

            <TextView
                android:id="@+id/textview_startdate_readonly"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="12dp"
                android:text="@string/start_date"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textview_enddate_readonly"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekbar_readonly" />

            <TextView
                android:id="@+id/textview_triptypeshow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8"
                android:text=""
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_triptype_readonly" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="191dp" />

            <TextView
                android:id="@+id/textview_price_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/price_eur"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_triptypeshow" />

            <TextView
                android:id="@+id/textview_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textview_price_readonly"
                app:layout_constraintTop_toBottomOf="@+id/textview_triptypeshow" />

            <EditText
                android:id="@+id/edittext_destination_readonly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:drawablePadding="@dimen/five_dp"
                android:drawableLeft="@drawable/ic_destination"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_destination_readonly" />

            <RatingBar
                android:id="@+id/ratingbar_readonly"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:clickable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_rating_readonly" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>